--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,8 +3,17 @@
   <head>
     <title>FEEEED MEEEEEEEEEE</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body>
-    {{{body}}}
+
+    <!--lets try this in the css<img src="/images\foodBannerMirror1.jpg" class="header-image">-->
+    <div class="site-layout"></div>
+      <div class="header-section">
+        <img src="/images/foodBannerMirror1.jpg" class="header-image"></div>
+        <h1 class="header-name">Website Name Thing</h1>
+      </div>
+      {{{body}}}
+    </div>
   </body>
 </html>
