setup route tests

--- a/views/ingredients.hbs
+++ b/views/ingredients.hbs
@@ -8,9 +8,7 @@
     <div class="media boxed-item item-not-selected" id="item{{id}}">
       <img class="mr-3" src="/images/fush.png" alt="Generic placeholder image">
       <div class="media-body">
-        <h5 class="mt-0 mb-1">
-          {{name}}
-        </h5>
+        <h5 class="mt-0 mb-1">{{name}}</h5>
         <input type="checkbox" class="big-checkbox" name="{{id}}" onclick="toggleState()">
       </div>
     </div>
