--- a/views/dishes.hbs
+++ b/views/dishes.hbs
@@ -6,9 +6,7 @@
   <div class="media boxed-item item-selected">
     <img class="mr-3" src="/images/fush.png" alt="Generic placeholder image">
     <div class="media-body">
-      <h5 class="mt-0 mb-1">
-        {{name}}
-      </h5>
+      <h5 class="mt-0 mb-1">{{name}}</h5>
     </div>
   </div>
   {{/each}}
