fix dishes page bug

--- a/views/ingredients.hbs
+++ b/views/ingredients.hbs
@@ -1,4 +1,4 @@
-<form action="/dishes" method="post">
+<form action="/dishes" method="GET">
 
   <input class="btn btn-outline-primary" type="submit" value="What Can I Make?">
   {{#each categories}}
